--- a/inputs.html
+++ b/inputs.html
@@ -227,7 +227,7 @@ const inputs = [
   { text: "mouseXR W W W mouseXY REN", video: "inputs2.mp4" },
   { text: "mouseXR", video: "inputs3.mp4" },
   { text: "mouseXR(3) W W", noResult: true },
-  { text: "mouseXR(2) W W W", notRendered: true }
+  { text: "mouseXR(2) W W W", video: "input5.mp4"}
 ];
 
 const inputsDiv = document.getElementById("inputs");
