Add new input entry and notRendered flag

--- a/inputs.html
+++ b/inputs.html
@@ -227,7 +227,8 @@ const inputs = [
   { text: "mouseXR W W W mouseXY REN", video: "inputs2.mp4" },
   { text: "mouseXR", video: "inputs3.mp4" },
   { text: "mouseXR(3) W W", noResult: true },
-  { text: "mouseXR(2) W W W", video: "input5.mp4"}
+  { text: "mouseXR(2) W W W", video: "input5.mp4"},
+  { text: "W W W W mouseXR W W W W W W W mouseXL W W W W W", notRendered: true}
 ];
 
 const inputsDiv = document.getElementById("inputs");
