--- a/inputs.html
+++ b/inputs.html
@@ -228,7 +228,7 @@ const inputs = [
   { text: "mouseXR", video: "inputs3.mp4" },
   { text: "mouseXR(3) W W", noResult: true },
   { text: "mouseXR(2) W W W", video: "input5.mp4"},
-  { text: "W W W W mouseXR W W W W W W W mouseXL W W W W W", notRendered: true}
+  { text: "W W W W mouseXR W W W W W W W mouseXL W W W W W", video: "input6.mp4"}
 ];
 
 const inputsDiv = document.getElementById("inputs");
