--- a/inputs.html
+++ b/inputs.html
@@ -229,8 +229,9 @@ const inputs = [
   { text: "mouseXR(3) W W", noResult: true },
   { text: "mouseXR(2) W W W", video: "input5.mp4"},
   { text: "W W W W mouseXR W W W W W W W mouseXL W W W W W", video: "input6.mp4"},
-  { text: "Unprompted", video: "input7.mp4", Unprompted: true}
-  { text: "Unprompted", video: "input8.mp4", Unprompted: true}
+  { text: "Unprompted", video: "input7.mp4", Unprompted: true},
+  { text: "Unprompted", video: "input8.mp4", Unprompted: true},
+  { text: "Unprompted", video: "input9.mp4", Unprompted: true},
 ];
 
 const inputsDiv = document.getElementById("inputs");
