--- a/inputs.html
+++ b/inputs.html
@@ -233,6 +233,7 @@ const inputs = [
   { text: "Unprompted", video: "input8.mp4", Unprompted: true},
   { text: "Unprompted", video: "input9.mp4", Unprompted: true},
   { text: "Unprompted", video: "input10.mp4", Unprompted: true},
+  { text: "Unprompted", video: "input11.mp4", Unprompted: true},
 ];
 
 const inputsDiv = document.getElementById("inputs");
