Update inputs.html with new input entry
Added a new input entry for 'MouseXR W W W W REN' in the inputs array.

--- a/inputs.html
+++ b/inputs.html
@@ -181,7 +181,7 @@
     box-shadow: 0 0 30px #ff000099;
   }
   .tile img, .tile video {
-    width: 100%;
+    width: 100%;https://www.qag10.com/
     height: auto;
     border-radius: 8px;
   }
@@ -234,6 +234,7 @@ const inputs = [
   { text: "Unprompted", video: "input9.mp4", Unprompted: true},
   { text: "Unprompted", video: "input10.mp4", Unprompted: true},
   { text: "Unprompted", video: "input11.mp4", Unprompted: true},
+  { text: "MouseXR W W W W REN",notRendered: true},
 ];
 
 const inputsDiv = document.getElementById("inputs");
