--- a/inputs.html
+++ b/inputs.html
@@ -234,7 +234,7 @@ const inputs = [
   { text: "Unprompted", video: "input9.mp4", Unprompted: true},
   { text: "Unprompted", video: "input10.mp4", Unprompted: true},
   { text: "Unprompted", video: "input11.mp4", Unprompted: true},
-  { text: "MouseXR W W W W REN",notRendered: true},
+  { text: "MouseXR W W W W REN", video: "input12.mp4"},
 ];
 
 const inputsDiv = document.getElementById("inputs");
