--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@
    <a href="dusty.html"><button class="play-button">scuffed</button></a>
 	<a href="inputs.html"><button class="play-button">Inputs (gshift/bx70)</button></a>
 	<a href="https://ollix27.neocities.org"><button class="play-button">GIGADWARFS OWN WEBSITE!!!1!!</button></a>
+	<a href="https://smokepowered.com/"><img src=https://smokepowered.com/smoke.gif"></a>
+	
 	
 
   <div id="time" class="time"></div>
