oh fuck, ha ha ha

--- a/index.html
+++ b/index.html
@@ -215,7 +215,9 @@
    <a href="dusty.html"><button class="play-button">scuffed</button></a>
 	<a href="inputs.html"><button class="play-button">Inputs (gshift/bx70)</button></a>
 	<a href="https://ollix27.neocities.org"><button class="play-button">GIGADWARFS OWN WEBSITE!!!1!!</button></a>
-	<a href="https://smokepowered.com/"><img src=http://smokepowered.com/smoke.gif"></a>
+	<a href="https://smokepowered.com/">
+		<img src=http://smokepowered.com/smoke.gif" class="glow-gif">
+	</a>
 	
 	
 
